# aoc-2023

./: .gitignore  Cargo.toml  README.md
day-01/: Cargo.toml
day-01/src/lib/: input.rs  lib.rs  stage.rs  string.rs
day-02/: Cargo.toml
day-02/src/lib/: input.rs  stage.rs
day-03/: Cargo.toml
day-03/src/lib/: input.rs  lib.rs  stage.rs
day-04/: Cargo.toml
day-04/src/lib/: input.rs  lib.rs  scratchoff.rs  stage.rs
day-05/: Cargo.toml
day-05/src/lib/: almanac.rs  input.rs  lib.rs  parts.rs
day-06/: Cargo.toml
day-06/src/lib/: args.rs  boat.rs  input.rs  lib.rs  parts.rs
day-07/: Cargo.toml
day-07/src/lib/: camel.rs  error.rs  input.rs  lib.rs  parts.rs
