[package]
name = "day-05"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.10", features = [ "derive" ] }

[lints]
workspace = true

[lib]
name = "day05"
path = "src/lib/lib.rs"

[[bin]]
name = "day05-part1"
path = "src/bin/part1.rs"

[[bin]]
name = "day05-part2"
path = "src/bin/part2.rs"
